--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 # Financial RAG Analyst Assistant - Python Dependencies
 # FE524 Project Requirements
+#
+# Install with uv (recommended):
+#   uv venv
+#   .venv\Scripts\activate  (Windows) or source .venv/bin/activate (Mac/Linux)
+#   uv pip install -r requirements.txt
+#
+# Or quick install: uv pip install -r requirements.txt
 
 # Core ML & NLP
 openai>=1.0.0
-sentence-transformers>=2.2.2
-transformers>=4.30.0
+python-dotenv>=1.0.0  # For loading .env file
+# sentence-transformers>=2.2.2  # No longer needed - using OpenAI text-embedding-3-small
+# transformers>=4.30.0  # No longer needed - using OpenAI embeddings
 
 # Vector Database & Search
 chromadb>=0.4.0
